# skoltech-swarmfleye

./: README.md  SwarmFleye Manual.pages  kinect-webot.sh
Gesture recognition/DTWGestureRecognition/: MainWindow.xaml  MainWindow.xaml.cs  Skeleton2DDataExtract.cs
Kinect/: KinectManager.cs
Robot Control/: VRobotMotionFacadeImpl.cpp  VRobotMotionFacadeImpl.h  template<class T>.cpp  v_robot_motion_facade_impl.cpp  v_robot_motion_facade_impl.h
Unity Sceen/Assets/GesturesDemo/Scripts/: GestureListener.cs
Unity Sceen/Assets/KinectScripts/Samples/: SimpleGestureListener.cs
Unity Sceen/Assets/Scripts/: FfserverImageFeed.js  FfserverImageFeed2.js  image.cs  video_feed.js
Unity Sceen/Assets/Socket Server/: ClientControl.cs  Control.cs  ServerControl.cs
Unity Sceen/Assets/Textures/: maki.png.bytes
Unity Sceen/Assets/_Scene/: WeBot UI.unity
Unity Sceen/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
Unity scripts/: FfserverImageFeed.js  FfserverImageFeed2.js  VideoFeedUrl.js  ffserver_image_feed.js  v2.cs  video_feed.js  vk.js
ffmpeg stuff/: ffmpeg_capture_command.txt  ffserver.conf
kinect-webot/: CMakeLists.txt  VRobotMotionFacadeImpl.cpp  chat_client.cpp  chat_message.hpp  data.xml  main.cpp
kinect-webot-on-the-robot/: CMakeLists.txt  VRobotMotionFacadeImpl.h  chat_client.cpp  main.cpp
marko/: README.md
