project(kinect-webot)
cmake_minimum_required(VERSION 2.8)
set( CMAKE_CXX_FLAGS "-std=c++11")
set(Boost_USE_STATIC_LIBS OFF)
set(BOOST_LIBRARYDIR /usr/lib/arm-linux-gnueabihf)
set(BOOST_INCLUDEDIR /usr/include/arm-linux-gnueabihf)
set(Boost_NO_SYSTEM_PATHS ON)
set(Boost_DEBUG ON)
aux_source_directory(. SRC_LIST)
file(GLOB SRC_LIST *.cpp)
add_executable(${PROJECT_NAME} ${SRC_LIST})

FIND_PACKAGE(Boost COMPONENTS filesystem date_time system thread regex chrono signals)
IF(Boost_FOUND)
    MESSAGE("BOOST FOUND")
    MESSAGE("INCLUDE DIRS: ${Boost_INCLUDE_DIRS}")
    MESSAGE("LIBRARIES": ${Boost_LIBRARIES})
    INCLUDE_DIRECTORIES(BEFORE ${Boost_INCLUDE_DIRS})
ENDIF()

target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} /usr/local/lib/libvcore.so /usr/local/lib/libvunirobot.so)
